force-app/main/default/objects/Ola_Pickup__c/Ola_Pickup__c.object-meta.xml
<CustomObject>
    <label>Ola Pickup</label>
    <nameField>
        <displayFormat>Ola-{00000}</displayFormat>
        <label>Ola Pickup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ola Pickups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>