force-app/main/default/objects/Ola_Pickup__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Ola Pickups</relationshipLabel>
    <relationshipName>Ola_Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>