force-app/main/default/objects/Ola_Pickup__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Ola Pickups</relationshipLabel>
    <relationshipName>Ola_Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>