force-app/main/default/objects/Ola_Pickup__c/fields/Pickup_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Datetime__c</fullName>
    <label>Pickup Datetime</label>
    <type>DateTime</type>
</CustomField>