force-app/main/default/objects/Ola_Pickup__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <label>Pickup Location</label>
    <type>TextArea</type>
</CustomField>