force-app/main/default/objects/Ola_Pickup__c/fields/Pickup_Status__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Status__c</fullName>
    <label>Pickup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>