force-app/main/default/objects/Ola_Pickup__c/fields/Visit_Pre_Registration__c.field-meta.xml
<CustomField>
    <fullName>Visit_Pre_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Pre-Registration</label>
    <referenceTo>Visit_Pre_Registration__c</referenceTo>
    <relationshipLabel>Ola Pickups</relationshipLabel>
    <relationshipName>Ola_Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>